[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/music/jump.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/images/player.png" type="Texture" id=2]
[ext_resource path="res://src/TRlevels/AI2.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.25, 38 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.4368, 34.6482 )

[node name="AI" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Player" type="Sprite" parent="."]
modulate = Color( 0.772549, 0.2, 0.831373, 1 )
self_modulate = Color( 1, 0.286275, 0, 1 )
position = Vector2( -1, 7 )
scale = Vector2( 0.979167, 0.770833 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.999998, 7 )
scale = Vector2( 0.976562, 0.768229 )
polygon = PoolVector2Array( -12, -11, -48, -32, -48, 33, -35, 47, 35, 48, 48, 34, 48, -32, 42, -44, 32, -48, -35, -48, -46, -38, -48, -34 )

[node name="enhit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enhit"]
modulate = Color( 0.266667, 0, 1, 1 )
position = Vector2( -1.25, 9 )
shape = SubResource( 1 )

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
area_mask = 3

[node name="CoinDetectArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="CoinDetectArea"]
modulate = Color( 0.980392, 0.878431, 0.0352941, 1 )
self_modulate = Color( 0.972549, 0.913725, 0.0117647, 1 )
position = Vector2( -2.28246, 6.52691 )
shape = SubResource( 2 )

[node name="detectoRay1" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( 0, -350 )
collision_mask = 12
collide_with_areas = true

[node name="detectoRay2" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( 100, -350 )
collision_mask = 12
collide_with_areas = true

[node name="detectoRay3" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( -100, -350 )
collision_mask = 12
collide_with_areas = true

[node name="detectoRay4" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( -70, -350 )
collision_mask = 12
collide_with_areas = true

[node name="detectoRay5" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( 70, -350 )
collision_mask = 12
collide_with_areas = true

[node name="detectoRay6" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( 40, -350 )
collision_mask = 12
collide_with_areas = true

[node name="detectoRay7" type="RayCast2D" parent="."]
light_mask = 0
scale = Vector2( 1, 1.5 )
enabled = true
cast_to = Vector2( -40, -350 )
collision_mask = 12
collide_with_areas = true

[connection signal="area_entered" from="enhit" to="." method="_on_enhit_area_entered"]
[connection signal="body_entered" from="enhit" to="." method="_on_enhit_body_entered"]
[connection signal="area_entered" from="CoinDetectArea" to="." method="_on_CoinDetectArea_area_entered"]
